# scout

./: .gitignore  NAMESPACE_HANDLING.md  NOTES.md  README.md  REFACTORING_SUMMARY.md  requirements.txt  setup_deps.sh
src/scout_msgs/: CMakeLists.txt  package.xml
src/scout_system/: package.xml  setup.cfg  setup.py
src/scout_system/config/: explore_params.yaml  hazard_params.yaml  scout_params.yaml  scout_params_mapping.yaml  scout_params_mapping_real.yaml  scout_params_real.yaml  slam_params.yaml  ur7_bridge.yaml  waypoints.txt
src/scout_system/launch/: gazebo.launch.py  spawn_robot.launch.py  system.launch.py
src/scout_system/models/hazard_cone_blue/: model.config  model.sdf
src/scout_system/models/hazard_cone_red/: model.config  model.sdf
src/scout_system/models/hazard_cone_yellow/: model.config  model.sdf
src/scout_system/models/hazard_cube_blue/: model.config  model.sdf
src/scout_system/models/hazard_cube_red/: model.config  model.sdf
src/scout_system/models/hazard_cube_yellow/: model.config  model.sdf
src/scout_system/models/scout_dock/: model.config  model.sdf
src/scout_system/models/turtlebot3_burger_cam_pinhole/: model.config  model.sdf
src/scout_system/models/ur7_placeholder/: model.config  model.sdf
src/scout_system/scout_system/: auto_mapper.py  hazard_detector.py  hazard_tracker.py  manual_mapper.py  mission_manager.py  scan_resampler.py  scout_teleop.py  ur7_client_stub.py
src/scout_system/scout_system/detectors/: __init__.py  base.py  hsv.py  yolo.py
src/scout_system/urdf/: README_camera.md
src/scout_system/worlds/: scout_arena.world
(+3 files in other folders)
